--- a/Weblog_v1/web/global.css
+++ b/Weblog_v1/web/global.css
@@ -28,7 +28,7 @@ a { color:#123456; }
 #adminpane { position:absolute; width:700px; top:100px; left:50px; clear:both; }
 #adminpane label { display:inline-block; width:100px; vertical-align:top; }
 #adminpane input { display:inline-block; width:400px; }
-#adminpane textarea { display:inline-block; width:400px; }
+#adminpane textarea { display:inline-block; width:400px; height:200px; }
 #adminpane #posttitle { margin-bottom:10px; }
 #adminpane #posttitle #labeltitle { margin-right: 10px; }
 #adminpane #postbody #labelbody { margin-right: 10px; }
