--- a/Weblog_v1/web/global.css
+++ b/Weblog_v1/web/global.css
@@ -22,7 +22,11 @@ a { color:#123456; }
 
 #rightpane { position:absolute; height:200px; width:450px; top:100px; left:260px; }
 #rightpane .post { margin-bottom:10px; }
-#rightpane .post .comment { margin-left:50px; padding-top:5px; padding-bottom:5px; margin-bottom:5px; margin-top:5px; border:#cccccc solid 1px; }
+#rightpane .post .comment { width:300px; margin-left:50px; padding-top:5px; padding-bottom:5px; margin-bottom:5px; margin-top:5px; border:#cccccc solid 1px; }
+#rightpane #addcomment { position:relative; margin-top:50px; }
+#rightpane #addcomment #labelcommentbody { position:absolute; top:0px; }
+#rightpane #addcomment #commentbody { position:absolute; top:0px; left:100px; height:50px; width:300px; }
+#rightpane #addcomment #buttonpost { position:absolute; top:75px; left:300px; }
 
 #indexlink { position:absolute; top:0px; left:600px; color:#123456; }
 #adminpane { position:absolute; width:700px; top:100px; left:50px; clear:both; }
