--- a/Kwetter/web/resources/css/screen.css
+++ b/Kwetter/web/resources/css/screen.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color: #EAECEE;
+    background-color: white;
     font-family: Verdana, sans-serif;
     font-size: 11px;
 }
