--- a/Kwetter/web/WEB-INF/templates/personal.xhtml
+++ b/Kwetter/web/WEB-INF/templates/personal.xhtml
@@ -9,9 +9,12 @@
     </h:head>
     <h:body>
         <div id="container">
+            <div id="search">
+                SEARCH
+            </div>
             <div id="left">
                 <div id="S0">
-                    <h1>User Info</h1>
+                    <h1>What's happening</h1>
                     <ui:insert name="S0">
                         plaatje + naam
                     </ui:insert>
@@ -19,7 +22,7 @@
 
                 <div id="S1">
                     <ui:insert name="S1">
-                        standard tweets
+                        timeline en mentions
                     </ui:insert>
                 </div>
             </div>
