--- a/Kwetter/web/WEB-INF/templates/homepage.xhtml
+++ b/Kwetter/web/WEB-INF/templates/homepage.xhtml
@@ -9,6 +9,11 @@
     </h:head>
     <h:body>
         <div id="container">
+            <div id="header">
+                <ui:insert name="login">
+                    login button
+                </ui:insert>
+            </div>
             <div id="left">
                 <div id="S0">
                     <h1>User Info</h1>
