--- a/Kwetter/web/WEB-INF/templates/personal.xhtml
+++ b/Kwetter/web/WEB-INF/templates/personal.xhtml
@@ -6,6 +6,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title>Kwetter</title>
         <h:outputStylesheet name="css/screen.css"/>
+        <h:outputStylesheet name="css/ui-lightness/jquery-ui-1.8.10.custom.css"/>
+        <script type="text/javascript" src="/Kwetter/resources/js/jquery-1.4.4.min.js"></script>
+        <script type="text/javascript" src="/Kwetter/resources/js/jquery-ui-1.8.10.custom.min.js"></script>
+        <script type="text/javascript" src="/Kwetter/resources/js/functions.js"></script>
     </h:head>
     <h:body>
         <div id="container">
