HET WERKT OMGWTFBBQ

--- a/Kwetter/web/WEB-INF/templates/personal.xhtml
+++ b/Kwetter/web/WEB-INF/templates/personal.xhtml
@@ -35,7 +35,7 @@
 
             <div id="right">
                 <div id="S2">
-                    <h1>Your tweets</h1>
+                    <h1>Your info</h1>
                     <ui:insert name="S2">
                         tweets
                     </ui:insert>
