--- a/KwetterMonitor/src/kwettermonitor/KwetterMonitorView.form
+++ b/KwetterMonitor/src/kwettermonitor/KwetterMonitorView.form
@@ -12,8 +12,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jScrollPane1" alignment="0" pref="352" max="32767" attributes="1"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jScrollPane1" alignment="0" pref="381" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jTextField1" min="-2" pref="256" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -21,7 +21,7 @@
                       </Group>
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="29" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -36,7 +36,7 @@
                       <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="175" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="208" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -74,33 +74,11 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JList" name="jList1">
+            <Component class="javax.swing.JTextArea" name="jTextArea1">
               <Properties>
-                <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                  <StringArray count="20">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                    <StringItem index="4" value="Item 5"/>
-                    <StringItem index="5" value="Item 1"/>
-                    <StringItem index="6" value="Item 2"/>
-                    <StringItem index="7" value="Item 3"/>
-                    <StringItem index="8" value="Item 4"/>
-                    <StringItem index="9" value="Item 5"/>
-                    <StringItem index="10" value="Item 1"/>
-                    <StringItem index="11" value="Item 2"/>
-                    <StringItem index="12" value="Item 3"/>
-                    <StringItem index="13" value="Item 4"/>
-                    <StringItem index="14" value="Item 5"/>
-                    <StringItem index="15" value="Item 1"/>
-                    <StringItem index="16" value="Item 2"/>
-                    <StringItem index="17" value="Item 3"/>
-                    <StringItem index="18" value="Item 4"/>
-                    <StringItem index="19" value="Item 5"/>
-                  </StringArray>
-                </Property>
-                <Property name="name" type="java.lang.String" value="jList1" noResource="true"/>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
+                <Property name="name" type="java.lang.String" value="jTextArea1" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
